fonts weight fix on mobile

--- a/css/alakas-2019-black.webflow.css
+++ b/css/alakas-2019-black.webflow.css
@@ -3102,7 +3102,7 @@ img {
     padding: 40px;
     font-size: 3vw;
     line-height: 4vw;
-    font-weight: 600;
+    font-weight: 200;
   }
   .grid {
     grid-row-gap: 20px;
